# wispy-fog

./: .env.example  .gitignore  Cargo.toml  README.md
src/: agents.rs  app.rs  config.rs  inspect.rs  main.rs  tools.rs
src/agent/: basic.rs  history.rs  mod.rs
src/agents/: basic.rs  event.rs  history.rs
src/providers/: gemini_adapter.rs  llm_provider.rs  mod.rs
src/tools/: echo.rs  mod.rs  skillmd.rs  write_file.rs
