[package]
name = "wispy-fog"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
rig-core = { version = "0.32.0", features = ["derive"] }
